# openvino-examples

./: README.md  pyproject.toml
src/: README.md  devices.py  faces.py  verify_npu.py
